# imdb_sentiment_analysis

./: .gitattributes  .gitignore  README.md  imdb_training.ipynb  imdb_training.py  metrics.py  pyproject.toml  requirements.txt  training.ipynb  training.py
.ipynb_checkpoints/: training-checkpoint.ipynb
imdb-sentiment/: config.json
