[tool.poetry]
name = "ml-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["crotodev <133077707+crotodev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11.5"
datasets = "^2.14.5"
jupyter = "^1.0.0"
pandas = "^2.1.0"
matplotlib = "^3.7.3"
transformers = {extras = ["torch"], version = "^4.33.1"}
accelerate = "^0.22.0"
tqdm = "^4.66.1"
tensorboard = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
